--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -1,6 +1,47 @@
-/* This is an example of using Sass, otherwise plain CSS works too*/
-$primary-background: pink;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
 body {
-  background-color: $primary-background;
+  background-image: url('../../images/game-show-background.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: 'Fredoka One', cursive;
+  text-align: center;
+}
+
+.heading {
+  font-size: 8em;
+  margin: 30px 0px;
+}
+
+.enter-names {
+  font-size: 2.5em;
+  margin: 10px 0px;
+}
+
+.name-input-wrapper {
+  display: flex;
+  justify-content: center;
+  margin: 15px 0px;
+  vertical-align: middle;
+}
+
+.name-input-label {
+  font-size: 2em;
+  margin-right: 10px;
+}
+
+.name-input {
+  height: 40px;
+  width: 500px;
+}
+
+.button {
+  font-size: 2em;
+  height: 100px;
+  margin: 15px 0px;
+  width: 300px;
 }
