--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -13,7 +13,7 @@ body {
 }
 
 .intro-page {
-  background-image: url('../../images/intro-circus.jpg');
+  background-image: url('../../images/clown.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
@@ -78,7 +78,7 @@ body {
 }
 
 .gameplay {
-  background-image: url('../../images/clown.jpg');
+  background-image: url('../../images/intro-circus.jpg');
   background-repeat: no-repeat;
   background-size: 100% 100%;
   text-align: center;
@@ -109,13 +109,15 @@ body {
 }
 
 .character {
-  background-color: black;
-  border: white 5px solid;
+  background-color: white;
+  border: black 5px solid;
+  color: black;
   display: inline-block;
   font-size: 2em;
-  height: 65px;
+  height: 70px;
   margin: 5px;
-  width: 50px;
+  transition: background 0.5s linear;
+  width: 55px;
 }
 
 .break {
@@ -127,6 +129,8 @@ body {
 }
 
 .hidden {
+  background-color: black;
+  border-color: white;
   color: black;
 }
 
@@ -166,6 +170,7 @@ body {
 
 .pick-letter {
   cursor: pointer;
+  pointer-events: none;
 }
 
 .pick-letter:hover {
@@ -174,4 +179,25 @@ body {
 
 .pick-letter:active {
   color: red;
+}
+
+.quit-screen {
+  background: url('../../images/quit.jpg') no-repeat center center fixed;
+  background-size: cover;
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  text-align: center;
+  z-index: 20;
+}
+
+.player-quit {
+  font-size: 3em;
+  margin-top: 0px;
+  padding-top: 20px;
+}
+
+.button--new-game {
+  display: flex;
+  margin: auto;
 }
