--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -91,7 +91,36 @@ body {
 }
 
 .wheel {
+  animation: scroll infinite;
+  height: 200px;
+  margin: auto;
+  overflow: auto;
+  scroll-behavior: smooth;
   width: 25%;
+}
+
+.wedge {
+  border: 4px solid;
+  text-align: center;
+  background-color: tomato;
+  display: flex;
+  font-size: 1.5em;
+  flex-direction: column;
+  justify-content: center;
+  margin: auto;
+  min-height: 200px;
+  width: 98px;
+}
+
+.death-wedge {
+  background-color: black;
+  font-size: 1em;
+}
+
+::-webkit-scrollbar {
+  background: transparent;
+  width: 0px;
+  /* make scrollbar transparent */
 }
 
 .board {
@@ -200,32 +229,4 @@ body {
 .button--new-game {
   display: flex;
   margin: auto;
-}
-
-.wheel {
-  height:200px;
-  width: 100px;
-  background-color: aqua;
-  overflow: auto;
-  scroll-behavior: smooth;
-  animation: scroll infinite;
-}
-
-.wedge {
-  min-height: 200px;
-  width: 98px;
-  text-align: center;
-  background-color: tomato;
-  display: flex;
-  flex-direction: column;
-  // flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  border: 1px solid;
-}
-
-::-webkit-scrollbar {
-    width: 0px;
-    background: transparent; /* make scrollbar transparent */
 }
