--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -217,7 +217,6 @@ body {
 }
 
 .pick-letter {
-  cursor: pointer;
   opacity: 0.3;
   pointer-events: none;
 }
@@ -226,6 +225,11 @@ body {
   cursor: pointer;
   opacity: 1;
   pointer-events: auto;
+}
+
+.picked {
+  opacity: 0;
+  pointer-events: none;
 }
 
 .pick-letter:hover {
