--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -92,7 +92,7 @@ body {
 
 .wheel {
   animation: scroll infinite;
-  height: 200px;
+  height: 220px;
   margin: auto;
   overflow: auto;
   scroll-behavior: smooth;
@@ -100,7 +100,11 @@ body {
 }
 
 .wedge {
-  border: 4px solid;
+  background: rgba(0, 0, 0, 0.5);
+  border-bottom: 4px solid;
+  border-top: 4px solid;
+  border-right: 2px solid;
+  border-left: 2px solid;
   text-align: center;
   background-color: tomato;
   display: flex;
@@ -108,8 +112,9 @@ body {
   flex-direction: column;
   justify-content: center;
   margin: auto;
-  min-height: 200px;
   width: 98px;
+  min-height: 220px;
+  width: 150px;
 }
 
 .death-wedge {
