--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -233,8 +233,9 @@ body {
 .letter-section {
   background-color: rgba(0, 0, 0, 0.3);
   display: flex;
+  font-size: 1.5em;
   justify-content: space-around;
-  padding: 15px 5px;
+  padding: 10px 5px;
 }
 
 .pick-letter {
