--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -261,7 +261,8 @@ body {
   color: red;
 }
 
-.quit-screen {
+.quit-screen,
+.end-screen {
   background: url('../../images/quit.jpg') no-repeat center center fixed;
   background-size: cover;
   display: flex;
@@ -271,7 +272,8 @@ body {
   z-index: 20;
 }
 
-.player-quit {
+.player-quit,
+.player-end {
   font-size: 3em;
   margin-top: 0px;
   padding-top: 20px;
